# platformer

./: CMakeLists.txt  CMakeSettings.json
Resources/Navigation/: sheet-credits.txt
src/: main.cpp
